[eunji][#add] icon이미지, logo이미지, managermain.html, 서브바 추가

--- a/KosaESS/src/main/resources/application.properties
+++ b/KosaESS/src/main/resources/application.properties
@@ -16,6 +16,13 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
+#log \ud504\ub85c\ud544 \uc124\uc815
+spring.profiles.active=local
+
+#log\uc124\uc815
+logging.level.root=info  
+logging.level.com.finalprj.kess.controller=warn                                    
+#TRACE<DEBUG<INFO<WARN<ERROR
 
 mybatis.type-aliases-package=com.finalprj.kess
 mybatis.mapper-locations=classpath:mapper/**/*.xml
