[eunji][#add] Mapper CamelCase설정

--- a/KosaESS/src/main/resources/application.properties
+++ b/KosaESS/src/main/resources/application.properties
@@ -28,3 +28,6 @@ logging.level.com.finalprj.kess.controller=warn
 
 mybatis.type-aliases-package=com.finalprj.kess
 mybatis.mapper-locations=classpath:mapper/**/*.xml
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
