--- a/KosaESS/src/main/resources/application.properties
+++ b/KosaESS/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.0.203:1521:xe
 #spring.datasource.url=jdbc:oracle:thin:@112.221.241.99:51521:xe
-spring.datasource.username=hr
+spring.datasource.username=c##kcct5
 spring.datasource.password=kcc1234
 
 
