[seungwoo][#update] mapper, Controller 원상복구 중

--- a/KosaESS/bin/src/main/resources/application.properties
+++ b/KosaESS/bin/src/main/resources/application.properties
@@ -5,10 +5,12 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.0.203:1521:xe
+spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.0.203:1521:xe
 #spring.datasource.url=jdbc:oracle:thin:@112.221.241.99:51521:xe
-spring.datasource.username=hr
+spring.datasource.username=c##kcct5
 spring.datasource.password=kcc1234
 
 
@@ -26,3 +28,6 @@ logging.level.com.finalprj.kess.controller=warn
 
 mybatis.type-aliases-package=com.finalprj.kess
 mybatis.mapper-locations=classpath:mapper/**/*.xml
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
