[eunji][#update] admin insert class 수정

--- a/KosaESS/pom.xml
+++ b/KosaESS/pom.xml
@@ -74,6 +74,13 @@
     		<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
     		<version>1.16</version>
 		</dependency> 
+		
+		<!--file upload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
