--- a/KosaESS/src/main/resources/application.properties
+++ b/KosaESS/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.0.203:1521:xe
 spring.datasource.username=c##kcct5
 spring.datasource.password=kcc1234
 
-
+#file upload
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
