[seungwoo][#update]student_list 수정(출석 통계 내는중)

--- a/KosaESS/bin/src/main/resources/application.properties
+++ b/KosaESS/bin/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.0.203:1521:xe
 spring.datasource.username=c##kcct5
 spring.datasource.password=kcc1234
 
-
+#file upload
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
@@ -31,3 +31,7 @@ mybatis.mapper-locations=classpath:mapper/**/*.xml
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+    
+    
+#Timestamp \ub9e4\ud551
+spring.mvc.format.date-time=yyyy-MM-dd'T'HH:mm
