[eunji][#add] logo 추가 및 회원가입 화면 추가

--- a/KosaESS/pom.xml
+++ b/KosaESS/pom.xml
@@ -81,6 +81,13 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.4</version>
 		</dependency>
+		
+		<!--Gmail SMTP-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
