--- a/KosaESS/src/main/resources/application.properties
+++ b/KosaESS/src/main/resources/application.properties
@@ -35,3 +35,14 @@ mybatis:
     
 #Timestamp \ub9e4\ud551
 spring.mvc.format.date-time=yyyy-MM-dd'T'HH:mm
+
+spring:
+  mail:
+    host: smtp.naver.com 
+    port: 465
+    username: zoooz0616@naver.com
+    password: dldmswl0616!
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.ssl.enable: true
+      mail.smtp.ssl.trust: smtp.naver.com
